Add feature engineering and modeling notebooks for fraud detection
- Updated feature-engineering notebook to include IP address conversion to integer format with error handling for invalid IPs.
- Added a new modeling notebook that implements a machine learning pipeline using XGBoost, including data preprocessing, SMOTE for class balancing, hyperparameter tuning, and evaluation metrics.
- Included visualizations for model performance and SHAP values for feature importance analysis.

--- a/notebooks/eda-creditcard.ipynb
+++ b/notebooks/eda-creditcard.ipynb
@@ -303,6 +303,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d6a49127",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fraud_geo_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m fraud_country = \u001b[43mfraud_geo_df\u001b[49m.groupby(\u001b[33m'\u001b[39m\u001b[33mcountry\u001b[39m\u001b[33m'\u001b[39m)[\u001b[33m'\u001b[39m\u001b[33mclass\u001b[39m\u001b[33m'\u001b[39m].mean().sort_values(ascending=\u001b[38;5;28;01mFalse\u001b[39;00m).head(\u001b[32m10\u001b[39m)\n\u001b[32m      3\u001b[39m fraud_country.plot(kind=\u001b[33m'\u001b[39m\u001b[33mbar\u001b[39m\u001b[33m'\u001b[39m, figsize=(\u001b[32m10\u001b[39m,\u001b[32m6\u001b[39m))\n\u001b[32m      4\u001b[39m plt.title(\u001b[33m'\u001b[39m\u001b[33mTop Countries by Fraud Rate\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'fraud_geo_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "fraud_country = fraud_geo_df.groupby('country')['class'].mean().sort_values(ascending=False).head(10)\n",
+    "\n",
+    "fraud_country.plot(kind='bar', figsize=(10,6))\n",
+    "plt.title('Top Countries by Fraud Rate')\n",
+    "plt.xlabel('Country')\n",
+    "plt.ylabel('Fraud Rate')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "504d37af",
    "metadata": {},
