--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -3,154 +3,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df0e2194",
+   "id": "baf0d807",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '.conda (Python 3.11.14)' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n .conda ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from sklearn.model_selection import train_test_split, StratifiedKFold, RandomizedSearchCV\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from xgboost import XGBClassifier\n",
-    "from sklearn.metrics import precision_score, recall_score, f1_score, roc_auc_score, precision_recall_curve, confusion_matrix\n",
-    "import shap\n",
-    "\n",
-    "# Set visual style\n",
-    "sns.set_theme(style=\"whitegrid\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04e8ea3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the feature-engineered dataset\n",
-    "df = pd.read_csv('../data/processed/fraud_processed.csv')\n",
-    "\n",
-    "# Separate features and target\n",
-    "X = df.drop(columns=['class']) # Assuming 'class' is the target column\n",
-    "y = df['class']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "224cdf80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Stratified Train-Test Split (80/20)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    "from sklearn.metrics import (\n",
+    "    f1_score,\n",
+    "    confusion_matrix,\n",
+    "    average_precision_score\n",
     ")\n",
     "\n",
-    "# 2. Log Class Distribution BEFORE Resampling\n",
-    "print(\"--- [LOG] Class Distribution BEFORE Resampling (Training Set) ---\")\n",
-    "print(y_train.value_counts(normalize=True))\n",
-    "print(y_train.value_counts())\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "\n",
-    "# 3. Apply SMOTE ONLY to Training Data\n",
-    "# Strategy: We use SMOTE to create synthetic minority examples, ensuring the model\n",
-    "# learns fraud patterns without losing valuable majority class data.\n",
-    "smote = SMOTE(random_state=42)\n",
-    "X_train_res, y_train_res = smote.fit_resample(X_train, y_train)\n",
-    "\n",
-    "# 4. Log Class Distribution AFTER Resampling\n",
-    "print(\"\\n--- [LOG] Class Distribution AFTER SMOTE (Training Set Only) ---\")\n",
-    "print(y_train_res.value_counts(normalize=True))\n",
-    "print(y_train_res.value_counts())\n",
-    "\n",
-    "# 5. Verify Test Set remains imbalanced (Real-world distribution)\n",
-    "print(\"\\n--- [LOG] Test Set Distribution (Untouched) ---\")\n",
-    "print(y_test.value_counts(normalize=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abf6432c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize XGBoost\n",
-    "xgb = XGBClassifier(use_label_encoder=False, eval_metric='logloss', random_state=42)\n",
-    "\n",
-    "# Define Hyperparameter Space\n",
-    "param_dist = {\n",
-    "    'n_estimators': [100, 200, 300],\n",
-    "    'max_depth': [3, 6, 10],\n",
-    "    'learning_rate': [0.01, 0.1, 0.2],\n",
-    "    'subsample': [0.7, 0.8, 0.9]\n",
-    "}\n",
-    "\n",
-    "# Randomized Search with 5-Fold Stratified CV\n",
-    "cv = StratifiedKFold(n_splits=5)\n",
-    "random_search = RandomizedSearchCV(\n",
-    "    xgb, param_distributions=param_dist, n_iter=10, \n",
-    "    scoring='f1', cv=cv, verbose=1, random_state=42\n",
-    ")\n",
-    "\n",
-    "random_search.fit(X_train_res, y_train_res)\n",
-    "best_model = random_search.best_estimator_\n",
-    "\n",
-    "print(f\"\\nBest Parameters: {random_search.best_params_}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e23aaf34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = best_model.predict(X_test)\n",
-    "y_probs = best_model.predict_proba(X_test)[:, 1]\n",
-    "\n",
-    "print(f\"Precision: {precision_score(y_test, y_pred):.4f}\")\n",
-    "print(f\"Recall: {recall_score(y_test, y_pred):.4f}\")\n",
-    "print(f\"F1-Score: {f1_score(y_test, y_pred):.4f}\")\n",
-    "print(f\"AUC-ROC: {roc_auc_score(y_test, y_probs):.4f}\")\n",
-    "\n",
-    "# Confusion Matrix\n",
-    "cm = confusion_matrix(y_test, y_pred)\n",
-    "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
-    "plt.title('Confusion Matrix')\n",
-    "plt.ylabel('Actual')\n",
-    "plt.xlabel('Predicted')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f4e391e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate SHAP values\n",
-    "explainer = shap.TreeExplainer(best_model)\n",
-    "shap_values = explainer.shap_values(X_test)\n",
-    "\n",
-    "# Global Summary Plot\n",
-    "plt.title(\"SHAP Feature Importance\")\n",
-    "shap.summary_plot(shap_values, X_test)\n",
-    "\n",
-    "# Local Explanation (Force Plot for a True Positive)\n",
-    "# Replace index 0 with a known fraud case index if necessary\n",
-    "shap.initjs()\n",
-    "shap.force_plot(explainer.expected_value, shap_values[0, :], X_test.iloc[0, :])"
+    "sns.set_theme(style=\"whitegrid\")\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".conda",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
